# movies_api

./: .env.example  .gitignore  README.md
.docker/: docker-compose.yml  elastic_init.sh  (+3 more)
admin_panel/: .env.example  Dockerfile  pyproject.toml  tmp.sql
admin_panel/config/: settings.py  urls.py
admin_panel/config/components/: auth.py  database.py  installed_apps.py  localization.py  middleware.py  static.py
admin_panel/config/db_init/: restore.sh
admin_panel/config/nginx/: site.conf
admin_panel/html/: 404.html  index.html
admin_panel/movies/: admin.py  apps.py  models.py
admin_panel/movies/api/v1/: urls.py  views.py
admin_panel/movies/locale/en/LC_MESSAGES/: django.po
admin_panel/movies/locale/ru/LC_MESSAGES/: django.po
admin_panel/movies/migrations/: 0001_initial.py  0002_rename_created_filmwork_created_at_and_more.py  0003_alter_personfilmwork_role.py  0004_personfilmwork_updated_at_and_more.py
admin_panel/users/: auth.py  models.py
admin_panel/users/locale/en/LC_MESSAGES/: django.po
admin_panel/users/locale/ru/LC_MESSAGES/: django.po
admin_panel/users/migrations/: 0001_initial.py  0002_alter_user_last_name.py  0003_rename_is_admin_user_is_staff_user_is_superuser.py  0004_remove_user_password_alter_user_first_name_and_more.py
admin_panel/utils/: backoff.py
api/: .dockerignore  Dockerfile  Dockerfile.tests  pyproject.toml
api/src_api/: main.py
api/src_api/api/: router.py
api/src_api/core/config/: lifespan.py  settings.py
api/src_api/core/db/: cache.py  elastic_db.py  redis_db.py
api/src_api/features/genres/v1/: api.py  dto.py  exceptions.py  repository.py  schemas.py  service.py
api/src_api/features/movies/v1/: api.py  dto.py  exceptions.py  repository.py  schemas.py  service.py
api/src_api/features/persons/v1/: api.py  dto.py  exceptions.py  repository.py  schemas.py  service.py
api/src_api/features/shared/: schemas.py  types.py
api/src_api/tests/functional/: conftest.py  docker-compose.yml  settings.py
api/src_api/tests/functional/src/: test_gnres.py  test_movies.py  test_pesons.py
auth_api/: .env.example  Dockerfile  Dockerfile.tests  README.md  pyproject.toml
auth_api/migrations/: env.py
auth_api/migrations/versions/: 31911458cd92_unic_token_ver_user_id.py  51338366aad4_initial_revision.py  52d00db3f5a6_initial_revision.py  5bdb6671b456_initial_revision.py  822d7f66111f_add_user_field_is_superuser.py  887ce6a8eac5_token_versions_table.py  a2945c451172_add_is_active_user_field.py  b038447ac5a0_initial_revision.py  c0a00199c7a3_initial_revision.py  df83d6599879_oauth_model_added.py
auth_api/src_auth/: main.py
auth_api/src_auth/api/: router.py
auth_api/src_auth/core/config/: lifespan.py  logger.py  settings.py  tracer.py
auth_api/src_auth/core/db/: cache.py  exceptions.py  sql_alch.py
auth_api/src_auth/core/exc/: exceptions.py  handlers.py
auth_api/src_auth/core/security/: cookies.py  hash_pass.py  jwt.py  sso.py
auth_api/src_auth/features/auth/v1/: api.py  dto.py  exceptions.py  models.py  repository.py  schemas.py  service.py
auth_api/src_auth/features/auth_history/v1/: api.py
auth_api/src_auth/features/roles/v1/: api.py  dto.py  models.py  repository.py  schemas.py  service.py
auth_api/src_auth/features/shared/: dependencies.py  dto.py  schemas.py
auth_api/src_auth/features/users/v1/: api.py  dto.py  models.py  repository.py  schemas.py  service.py
auth_api/src_auth/tests/functional/: conftest.py  docker-compose.yml  settings.py
auth_api/src_auth/tests/functional/src/: conftest.py
auth_api/src_auth/tests/functional/src/auth/: conftest.py  test_register.py  test_v1_login.py  test_v1_logout.py  test_v1_logout_all.py  test_v1_refresh.py  test_v1_register.py
auth_api/src_auth/tests/functional/src/roles/: conftest.py  test_v1_assign_role.py  test_v1_check_role_assignment.py  test_v1_create_role.py  test_v1_delete_role.py  test_v1_get_roles.py  test_v1_revoke_role.py  test_v1_update_role.py
auth_api/src_auth/utils/: backoff.py  init_db.py  setup_db.py
etl/: .dockerignore  .env.example  main.py  pyproject.toml
etl/src/config/: logger.py
etl/src/db/: elastic_db.py  psql_db.py
etl/src/dto/: elastic_dto.py  psql_dto.py
etl/src/repositories/: elastic_repo.py  psql_repo.py  queries.py
etl/src/services/: etl.py
etl/src/transform/: psql_to_es.py
etl/src/utils/: backoff.py  state.py
etl/src_etl/: main.py
etl/src_etl/config/: logger.py  settings.py
etl/src_etl/db/: elastic_db.py  psql_db.py
etl/src_etl/dto/: elastic_dto.py  psql_dto.py
etl/src_etl/repositories/: elastic_repo.py  psql_repo.py  queries.py
etl/src_etl/services/: etl.py  fabric.py
etl/src_etl/transform/: psql_to_es.py
etl/src_etl/utils/: state.py
movies_api/: .env.example  Dockerfile  README.md  pyproject.toml
movies_api/src_api/: main.py
movies_api/src_api/api/: router.py
movies_api/src_api/core/config/: lifespan.py  logger.py  settings.py
movies_api/src_api/core/db/: cache.py  elastic_db.py  exceptions.py
movies_api/src_api/core/exc/: exceptions.py  handlers.py
movies_api/src_api/core/security/: jwt.py
movies_api/src_api/features/genres/v1/: dto.py
movies_api/src_api/features/movies/v1/: api.py  dto.py  exceptions.py  repository.py  schemas.py  service.py
movies_api/src_api/features/persons/v1/: api.py  dto.py  exceptions.py  repository.py  schemas.py
movies_api/src_api/features/shared/: dependencies.py  query_params.py  types.py
movies_api/src_api/tests/functional/: conftest.py  docker-compose.yml  settings.py
movies_api/src_api/tests/functional/src/: test_genres.py  test_movies.py  test_persons.py
movies_api/src_api/utils/: backoff.py
(+12 files in other folders)
